--- a/Gen1/charmander.html
+++ b/Gen1/charmander.html
@@ -1,10 +1,11 @@
 <html>
   <title>
-    Infernape
+    Charmander
   </title>
 
   <head>
     <link rel="stylesheet" href="../styles.css" />
+    <script src="../script.js"></script>
   </head>
 
   <marquee dir="left"
@@ -12,31 +13,30 @@
   >
 
   <div style="text-align: center;">
-    <img
-      src="Poke_IMG/pokeball.png"
-      width="150"
-      height="150"
-      class="pokeball"
-    />
-    <img src="Poke_IMG/LOGO.png" width="=300;" height="150;" class="logo" />
+    <img src="../img/pokeball.png" width="150" height="150" class="pokeball" />
+    <img src="../img/LOGO.png" width="=300;" height="150;" class="logo" />
   </div>
 
   <style>
-    .bg{
-      background-image: linear-gradient(90deg, rgb(250, 137, 9) 50%, brown 50%);
+    .bg {
+      background-color: rgb(250, 137, 9);
       text-align: center;
     }
   </style>
 
   <div class="bg">
-    <h2>Infernape</h2>
-    <img src="Poke_IMG/infernape.png" alt="Infernape" width="300" height="250" />
+    <h2>Charmander</h2>
+    <img
+      src="../img/charmander.png"
+      alt="Charmander"
+      width="300"
+      height="250"
+    />
   </div>
   <div class="type">
     <ul>
       <h4>Types</h4>
       <li class="fire">Fire</li>
-      <li class="fighting">Fighting</li>
     </ul>
   </div>
 
@@ -51,12 +51,12 @@
     </thead>
     <tbody align="center">
       <tr>
-        <td>76</td>
-        <td>104</td>
-        <td>71</td>
-        <td>108</td>
-        <td>104</td>
-        <td>71</td>
+        <td>39</td>
+        <td>52</td>
+        <td>43</td>
+        <td>65</td>
+        <td>60</td>
+        <td>50</td>
       </tr>
     </tbody>
   </table>
@@ -68,17 +68,18 @@
     </thead>
     <tbody align="center">
       <tr>
+        <td>NONE</td>
         <td>
-          <a href="monferno.html">Monferno</a><br /><img
-            src="Poke_IMG/monferno.png"
-            width="80"
+          <a href="charmeleon.html">Charmeleon</a><br /><img
+            src="../img/charmeleon.png"
             height="75"
+            width="80"
           />
         </td>
-        <td>NONE</td>
       </tr>
     </tbody>
   </table>
   <br />
-  <button><a href="../index.html">HOME</a></button>
+  <button id="Gen1" onclick="changeTabs(this.id,'r')">GEN1</button>
+
 </html>
