--- a/Gen4/piplup.html
+++ b/Gen4/piplup.html
@@ -4,6 +4,7 @@
   </title>
   <head>
       <link rel="stylesheet" href="../styles.css" />
+      <script src="../script.js"></script>
     </head>
 
     <marquee dir="left"
@@ -12,13 +13,13 @@
 
    <div style="text-align: center;">
         <img
-          src="Poke_IMG/pokeball.png"
+          src="../img/pokeball.png"
           width="150"
           height="150"
           class="pokeball"
         />
         <img
-          src="Poke_IMG/LOGO.png"
+          src="../img/LOGO.png"
           width="=300;"
           height="150;"
           class="logo"
@@ -35,7 +36,7 @@
   <div class="bg">
     <h2>Piplup</h2>
     <img
-      src="Poke_IMG/piplup.png"
+      src="../img/piplup.png"
       alt="Piplup"
       width="300"
       height="250"
@@ -79,7 +80,7 @@
         <td>NONE</td>
         <td>
           <a href="prinplup.html">Prinplup<br /><img
-            src="Poke_IMG/prinplup.png"
+            src="../img/prinplup.png"
             height="75"
             width="80"
           />
@@ -88,5 +89,5 @@
     </tbody>
   </table>
   <br />
-  <button><a href="../index.html">HOME</a></button>
+  <button id="Gen4" onclick="changeTabs(this.id,'r')">GEN4</button>
 </html>
