--- a/Gen4/empoleon.html
+++ b/Gen4/empoleon.html
@@ -1,10 +1,11 @@
 <html>
   <title>
-    Grotle
+    Empoleon
   </title>
 
   <head>
     <link rel="stylesheet" href="../styles.css" />
+    <script src="../script.js"></script>
   </head>
 
   <marquee dir="left"
@@ -13,35 +14,34 @@
 
   <div style="text-align: center;">
     <img
-      src="Poke_IMG/pokeball.png"
+      src="../img/pokeball.png"
       width="150"
       height="150"
       class="pokeball"
     />
-    <img src="Poke_IMG/LOGO.png" width="=300;" height="150;" class="logo" />
+    <img src="../img/LOGO.png" width="=300;" height="150;" class="logo" />
   </div>
 
   <style>
     .bg {
-      background-color: rgb(40, 218, 40);
+      background-image: linear-gradient(90deg, rgb(92, 168, 255) 50%, grey 50%);
       text-align: center;
     }
   </style>
 
   <div class="bg">
-    <h2>Grotle</h2>
-    <img src="Poke_IMG/grotle.png" alt="Grotle" width="300" height="250" />
+    <h2>Empoleon</h2>
+    <img src="../img/empoleon.png" alt="Empoleon" width="300" height="250" />
   </div>
-
   <div class="type">
     <ul>
       <h4>Types</h4>
-      <li class="grass">Grass</li>
+      <li class="water">Water</li>
+      <li class="steel">Steel</li>
     </ul>
   </div>
-
   <table width="100%" border="1">
-    <thead style="background-color: rgb(40, 218, 40);">
+    <thead style="background-color: rgb(92, 168, 255);">
       <th>HP</th>
       <th>Attack</th>
       <th>Defence</th>
@@ -51,18 +51,16 @@
     </thead>
     <tbody align="center">
       <tr>
-        <td>75</td>
-        <td>89</td>
-        <td>85</td>
-        <td>36</td>
-        <td>55</td>
-        <td>65</td>
+        <td>84</td>
+        <td>86</td>
+        <td>88</td>
+        <td>60</td>
+        <td>111</td>
+        <td>101</td>
       </tr>
     </tbody>
   </table>
-
   <br />
-
   <table width="100%" border="1">
     <thead>
       <th>PreEvo</th>
@@ -71,23 +69,16 @@
     <tbody align="center">
       <tr>
         <td>
-          <a href="turtwig.html">Turtwig</a><br /><img
-            src="Poke_IMG/turtwig.png"
+          <a href="prinplup.html">Prinplup</a><br /><img
+            src="../img/prinplup.png"
             width="80"
             height="75"
           />
         </td>
-        <td>
-          <a href="torterra.html">Torterra</a><br /><img
-            src="Poke_IMG/torterra.png"
-            width="80"
-            height="75"
-          />
-        </td>
+        <td>NONE</td>
       </tr>
     </tbody>
   </table>
-
   <br />
-  <button><a href="../index.html">HOME</a></button>
+  <button id="Gen4" onclick="changeTabs(this.id,'r')">GEN4</button>
 </html>
