--- a/Gen5/oshawott.html
+++ b/Gen5/oshawott.html
@@ -1,10 +1,11 @@
 <html>
   <title>
-    Empoleon
+    Oshawott
   </title>
 
   <head>
     <link rel="stylesheet" href="../styles.css" />
+    <script src="../script.js"></script>
   </head>
 
   <marquee dir="left"
@@ -12,33 +13,28 @@
   >
 
   <div style="text-align: center;">
-    <img
-      src="Poke_IMG/pokeball.png"
-      width="150"
-      height="150"
-      class="pokeball"
-    />
-    <img src="Poke_IMG/LOGO.png" width="=300;" height="150;" class="logo" />
+    <img src="../img/pokeball.png" width="150" height="150" class="pokeball" />
+    <img src="../img/LOGO.png" width="=300;" height="150;" class="logo" />
   </div>
 
   <style>
     .bg {
-      background-image: linear-gradient(90deg, rgb(92, 168, 255) 50%, grey 50%);
+      background-color: rgb(92, 168, 255);
       text-align: center;
     }
   </style>
 
   <div class="bg">
-    <h2>Empoleon</h2>
-    <img src="Poke_IMG/empoleon.png" alt="Empoleon" width="300" height="250" />
+    <h2>Oshawott</h2>
+    <img src="../img/oshawott.png" alt="Oshawott" width="300" height="250" />
   </div>
   <div class="type">
     <ul>
       <h4>Types</h4>
       <li class="water">Water</li>
-      <li class="steel">Steel</li>
     </ul>
   </div>
+
   <table width="100%" border="1">
     <thead style="background-color: rgb(92, 168, 255);">
       <th>HP</th>
@@ -50,12 +46,12 @@
     </thead>
     <tbody align="center">
       <tr>
-        <td>84</td>
-        <td>86</td>
-        <td>88</td>
+        <td>39</td>
+        <td>52</td>
+        <td>43</td>
+        <td>65</td>
         <td>60</td>
-        <td>111</td>
-        <td>101</td>
+        <td>50</td>
       </tr>
     </tbody>
   </table>
@@ -67,17 +63,18 @@
     </thead>
     <tbody align="center">
       <tr>
+        <td>NONE</td>
         <td>
-          <a href="prinplup.html">Prinplup</a><br /><img
-            src="Poke_IMG/prinplup.png"
-            width="80"
+          <a href="dewott.html">Dewott(NO CONTENT)</a><br /><img
+            src="../img/dewott.png"
             height="75"
+            width="80"
+            alt="Dewott"
           />
         </td>
-        <td>NONE</td>
       </tr>
     </tbody>
   </table>
   <br />
-  <button><a href="../index.html">HOME</a></button>
+  <button id="Gen5" onclick="changeTabs(this.id,'r')">GEN5</button>
 </html>
