--- a/Gen4/torterra.html
+++ b/Gen4/torterra.html
@@ -37,7 +37,7 @@
     <ul>
       <h4>Types</h4>
       <li class="grass">Grass</li>
-      <li class="rock">Rock</li>
+      <li class="ground">Ground</li>
     </ul>
   </div>
 
