--- a/Gen4/gen4.html
+++ b/Gen4/gen4.html
@@ -83,7 +83,7 @@
           <td>Torterra</td>
           <td>
             <div class="grass">Grass</div>
-            <div class="rock">Rock</div>
+            <div class="ground">Ground</div>
           </td>
           <td>
             <img src="../img/torterra.png" height="100;" width="120;" />
