--- a/Gen1/charizard.html
+++ b/Gen1/charizard.html
@@ -3,8 +3,8 @@
     Charizard
   </title>
   <head>
-    <link rel="stylesheet" href="../styles.css" />
-    <script src="../script.js"></script>
+    <link rel="stylesheet" href="../css/styles.css" />
+    <script src="../js/script.js"></script>
   </head>
 
   <marquee dir="left"
