--- a/Gen4/prinplup.html
+++ b/Gen4/prinplup.html
@@ -4,8 +4,8 @@
   </title>
 
   <head>
-    <link rel="stylesheet" href="../styles.css" />
-    <script src="../script.js"></script>
+    <link rel="stylesheet" href="../css/styles.css" />
+    <script src="../js/script.js"></script>
   </head>
 
   <marquee dir="left"
