--- a/Gen4/torterra.html
+++ b/Gen4/torterra.html
@@ -5,7 +5,7 @@
 
   <head>
     <link rel="stylesheet" href="../styles.css" />
-    <script src="../script.js"></script>
+    <script src="../js/script.js"></script>
   </head>
 
   <marquee dir="left"
