--- a/Gen6/gen6.html
+++ b/Gen6/gen6.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="../styles.css" />
-    <script src="../script.js"></script>
+    <link rel="stylesheet" href="../css/styles.css" />
+    <script src="../js/script.js"></script>
   </head>
   <title>
     Generation 6
