--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css" />
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="css/styles.css" />
+    <script src="js/script.js"></script>
   </head>
   <title>
     Pokedex
