--- a/Gen1/gen1.html
+++ b/Gen1/gen1.html
@@ -21,7 +21,7 @@
 
   <div class="tab">
     <button id="Home" onclick="changeTabs(this.id,'g')">HOME</button>
-    <button id="Gen1">GEN1</button>
+    <button id="Gen1" class="active">GEN1</button>
     <button id="Gen2" onclick="changeTabs(this.id,'g')">GEN2</button>
     <button id="Gen3" onclick="changeTabs(this.id,'g')">GEN3</button>
     <button id="Gen4" onclick="changeTabs(this.id,'g')">GEN4</button>
