--- a/Gen2/gen2.html
+++ b/Gen2/gen2.html
@@ -22,7 +22,7 @@
   <div class="tab">
     <button id="Home" onclick="changeTabs(this.id,'g')">HOME</button>
     <button id="Gen1" onclick="changeTabs(this.id,'g')">GEN1</button>
-    <button id="Gen2">GEN2</button>
+    <button id="Gen2" class="active">GEN2</button>
     <button id="Gen3" onclick="changeTabs(this.id,'g')">GEN3</button>
     <button id="Gen4" onclick="changeTabs(this.id,'g')">GEN4</button>
     <button id="Gen5" onclick="changeTabs(this.id,'g')">GEN5</button>
