--- a/Gen3/gen3.html
+++ b/Gen3/gen3.html
@@ -23,7 +23,7 @@
     <button id="Home" onclick="changeTabs(this.id,'g')">HOME</button>
     <button id="Gen1" onclick="changeTabs(this.id,'g')">GEN1</button>
     <button id="Gen2" onclick="changeTabs(this.id,'g')">GEN2</button>
-    <button id="Gen3">GEN3</button>
+    <button id="Gen3" class="active">GEN3</button>
     <button id="Gen4" onclick="changeTabs(this.id,'g')">GEN4</button>
     <button id="Gen5" onclick="changeTabs(this.id,'g')">GEN5</button>
     <button id="Gen6" onclick="changeTabs(this.id,'g')">GEN6</button>
