--- a/Gen6/gen6.html
+++ b/Gen6/gen6.html
@@ -26,7 +26,7 @@
     <button id="Gen3" onclick="changeTabs(this.id,'g')">GEN3</button>
     <button id="Gen4" onclick="changeTabs(this.id,'g')">GEN4</button>
     <button id="Gen5" onclick="changeTabs(this.id,'g')">GEN5</button>
-    <button id="Gen6">GEN6</button>
+    <button id="Gen6" class="active">GEN6</button>
     <button id="Gen7" onclick="changeTabs(this.id,'g')">GEN7</button>
   </div>
 
