--- a/Gen7/gen7.html
+++ b/Gen7/gen7.html
@@ -27,7 +27,7 @@
     <button id="Gen4" onclick="changeTabs(this.id,'g')">GEN4</button>
     <button id="Gen5" onclick="changeTabs(this.id,'g')">GEN5</button>
     <button id="Gen6" onclick="changeTabs(this.id,'g')">GEN6</button>
-    <button id="Gen7">GEN7</button>
+    <button id="Gen7" class="active">GEN7</button>
   </div>
 
   <body>
