--- a/Gen4/gen4.html
+++ b/Gen4/gen4.html
@@ -24,7 +24,7 @@
     <button id="Gen1" onclick="changeGen(this.id,'g')">GEN1</button>
     <button id="Gen2" onclick="changeGen(this.id,'g')">GEN2</button>
     <button id="Gen3" onclick="changeGen(this.id,'g')">GEN3</button>
-    <button>GEN4</button>
+    <button id="Gen4" class="active">GEN4</button>
     <button id="Gen5" onclick="changeGen(this.id,'g')">GEN5</button>
     <button id="Gen6" onclick="changeGen(this.id,'g')">GEN6</button>
     <button id="Gen7" onclick="changeGen(this.id,'g')">GEN7</button>
