--- a/Gen5/gen5.html
+++ b/Gen5/gen5.html
@@ -25,7 +25,7 @@
     <button id="Gen2" onclick="changeTabs(this.id,'g')">GEN2</button>
     <button id="Gen3" onclick="changeTabs(this.id,'g')">GEN3</button>
     <button id="Gen4" onclick="changeTabs(this.id,'g')">GEN4</button>
-    <button id="Gen5">GEN5</button>
+    <button id="Gen5" class="active">GEN5</button>
     <button id="Gen6" onclick="changeTabs(this.id,'g')">GEN6</button>
     <button id="Gen7" onclick="changeTabs(this.id,'g')">GEN7</button>
   </div>
