--- a/index.html
+++ b/index.html
@@ -26,16 +26,36 @@
     POKEDEX
   </h1>
 
-  <div class="tab">
-    <button class="active">HOME</button>
-    <button id="Gen1" onclick="changeTabs(this.id,'h')">GEN1</button>
-    <button id="Gen2" onclick="changeTabs(this.id,'h')">GEN2</button>
-    <button id="Gen3" onclick="changeTabs(this.id,'h')">GEN3</button>
-    <button id="Gen4" onclick="changeTabs(this.id,'h')">GEN4</button>
-    <button id="Gen5" onclick="changeTabs(this.id,'h')">GEN5</button>
-    <button id="Gen6" onclick="changeTabs(this.id,'h')">GEN6</button>
-    <button id="Gen7" onclick="changeTabs(this.id,'h')">GEN7</button>
+  <div class="navbar">
+    <a class="active" href="#home">Home</a>
+    <div class="dropdown">
+      <button class="dropbtn">
+        Generations
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a id="Gen1" onclick="changeTabs(this.id,'h')" href="#">Gen1</a>
+        <a id="Gen2" onclick="changeTabs(this.id,'h')" href="#">Gen2</a>
+        <a id="Gen3" onclick="changeTabs(this.id,'h')" href="#">Gen3</a>
+        <a id="Gen4" onclick="changeTabs(this.id,'h')" href="#">Gen4</a>
+        <a id="Gen5" onclick="changeTabs(this.id,'h')" href="#">Gen5</a>
+        <a id="Gen6" onclick="changeTabs(this.id,'h')" href="#">Gen6</a>
+        <a id="Gen7" onclick="changeTabs(this.id,'h')" href="#">Gen7</a>
+      </div>
+    </div>
   </div>
+
+  <!--<ul>
+    <li><a class="active" href="#home">Home</a></li>
+    <li><a id="Gen1" onclick="changeTabs(this.id,'h')" href="#">Gen1</a></li>
+    <li><a id="Gen2" onclick="changeTabs(this.id,'h')" href="#">Gen2</a></li>
+    <li><a id="Gen3" onclick="changeTabs(this.id,'h')" href="#">Gen3</a></li>
+    <li><a id="Gen4" onclick="changeTabs(this.id,'h')" href="#">Gen4</a></li>
+    <li><a id="Gen5" onclick="changeTabs(this.id,'h')" href="#">Gen5</a></li>
+    <li><a id="Gen6" onclick="changeTabs(this.id,'h')" href="#">Gen6</a></li>
+    <li><a id="Gen7" onclick="changeTabs(this.id,'h')" href="#">Gen7</a></li>
+  </ul>
+-->
   <br />
 
   <style>
