--- a/Gen3/swarmpert.html
+++ b/Gen3/swarmpert.html
@@ -1,6 +1,6 @@
 <html>
   <title>
-    Swarmpert
+    Swampert
   </title>
 
   <head>
@@ -29,7 +29,7 @@
   </style>
 
   <div class="bg">
-    <h2>Swarmpert</h2>
+    <h2>Swampert</h2>
     <img src="../img/swarmpert.png" alt="Swarmpert" width="300" height="250" />
   </div>
   <div class="type">
