--- a/Gen7/gen7.html
+++ b/Gen7/gen7.html
@@ -3,11 +3,17 @@
   <head>
     <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/script.js"></script>
+    <link
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
   </head>
   <title>
     Generation 7
   </title>
-  <marquee dir="left"
+  <marquee dir="left" 
     ><b><i>Website under development</i></b></marquee
   >
   <div style="text-align: center;">
@@ -15,7 +21,10 @@
     <img src="../img/LOGO.png" width="=300;" height="150;" class="logo" />
   </div>
 
-  <h1 style="text-align: center; font-family: 'Times New Roman', Times, serif;">
+  <h1
+    style="text-align: center; font-family: 'Times New Roman', Times, serif;"
+    
+  >
     POKEDEX
   </h1>
 
