--- a/index.html
+++ b/index.html
@@ -9,20 +9,24 @@
       crossorigin="anonymous"
     />
   </head>
+  <marquee dir="left" class="type"
+    ><b><i>Website under development</i></b></marquee
+  >
+  
   <title>
     Pokedex
   </title>
 
-  <marquee dir="left"
-    ><b><i>Website under development</i></b></marquee
-  >
 
   <div style="text-align: center;">
     <img src="img/pokeball.png" width="150" height="150" class="pokeball" />
     <img src="img/LOGO.png" width="=300;" height="150;" class="logo" />
   </div>
 
-  <h1 style="text-align: center; font-family: 'Times New Roman', Times, serif;">
+  <h1
+    style="text-align: center; font-family: 'Times New Roman', Times, serif;"
+    class="type"
+  >
     POKEDEX
   </h1>
 
@@ -43,19 +47,8 @@
         <a id="Gen7" onclick="changeTabs(this.id,'h')" href="#">Gen7</a>
       </div>
     </div>
+    <a class="">MyName</a>
   </div>
-
-  <!--<ul>
-    <li><a class="active" href="#home">Home</a></li>
-    <li><a id="Gen1" onclick="changeTabs(this.id,'h')" href="#">Gen1</a></li>
-    <li><a id="Gen2" onclick="changeTabs(this.id,'h')" href="#">Gen2</a></li>
-    <li><a id="Gen3" onclick="changeTabs(this.id,'h')" href="#">Gen3</a></li>
-    <li><a id="Gen4" onclick="changeTabs(this.id,'h')" href="#">Gen4</a></li>
-    <li><a id="Gen5" onclick="changeTabs(this.id,'h')" href="#">Gen5</a></li>
-    <li><a id="Gen6" onclick="changeTabs(this.id,'h')" href="#">Gen6</a></li>
-    <li><a id="Gen7" onclick="changeTabs(this.id,'h')" href="#">Gen7</a></li>
-  </ul>
--->
   <br />
 
   <style>
