--- a/Gen2/gen2.html
+++ b/Gen2/gen2.html
@@ -3,11 +3,17 @@
   <head>
     <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/script.js"></script>
+    <link
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
   </head>
   <title>
     Generation 2
   </title>
-  <marquee dir="left"
+  <marquee dir="left" 
     ><b><i>Website under development</i></b></marquee
   >
   <div style="text-align: center;">
